fix: malformed font link tag and adjust mobile sizing

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
     gtag('config', 'G-XXXXXXXXXX');
   </script>
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@400;600;700;800&display=swap"
-  rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@400;600;700;800&display=swap"
+    rel="stylesheet">
 
   <!-- SEO & Social Media -->
   <meta property="og:title" content="Mirkomil Oblokulov | Actuarial Science Student & Entrepreneur" />
