feat: add scroll reveal animations and fix portfolio button

--- a/index.html
+++ b/index.html
@@ -259,20 +259,7 @@
               It continuously scans global odds to detect price differences.
             </p>
 
-            <div class="project-details" style="display: none;">
-              <p class="detailed-desc">
-                A sophisticated risk-neutral modeling engine designed to identify and exploit price inefficiencies
-                across global sports betting markets.
-                The system calculates implied probabilities to detect 'sure-bet' opportunities (Σ 1/o < 1). It features
-                  a robust ETL pipeline to normalize heterogeneous data and a Stochastic Risk Management module. </p>
-                  <div class="tech-stack">
-                    <span class="tech-tag">Python</span>
-                    <span class="tech-tag">Pandas/NumPy</span>
-                    <span class="tech-tag">Rest APIs</span>
-                    <span class="tech-tag">ETL Pipelines</span>
-                    <span class="tech-tag">Risk Modeling</span>
-                  </div>
-            </div>
+
 
             <button onclick="openProject('arbitrage')" class="btn btn-outline project-toggle"
               style="font-size:0.8rem; padding:8px 16px;">
@@ -287,19 +274,7 @@
               Founded and led a student organization dedicated to promoting technology engagement.
             </p>
 
-            <div class="project-details" style="display: none;">
-              <p class="detailed-desc">
-                Developed the club's WordPress website and established a content workflow that increased member
-                participation by 40%.
-                Managed a team of peers to organize workshops and events focused on technology education.
-              </p>
-              <div class="tech-stack">
-                <span class="tech-tag">WordPress</span>
-                <span class="tech-tag">Leadership</span>
-                <span class="tech-tag">Event Planning</span>
-                <span class="tech-tag">Community Building</span>
-              </div>
-            </div>
+
 
             <button onclick="openProject('ufa')" class="btn btn-outline project-toggle"
               style="font-size:0.8rem; padding:8px 16px;">
@@ -314,19 +289,7 @@
               A comprehensive digital marketing campaign involving targeted email automation and social media graphics.
             </p>
 
-            <div class="project-details" style="display: none;">
-              <p class="detailed-desc">
-                Successfully improved website engagement metrics and brand visibility through automated MailChimp flows
-                and branded Canva assets.
-                Achieved a 15% increase in seasonal sign-ups.
-              </p>
-              <div class="tech-stack">
-                <span class="tech-tag">Canva</span>
-                <span class="tech-tag">MailChimp</span>
-                <span class="tech-tag">Social Media</span>
-                <span class="tech-tag">Data Analytics</span>
-              </div>
-            </div>
+
 
             <button onclick="openProject('united')" class="btn btn-outline project-toggle"
               style="font-size:0.8rem; padding:8px 16px;">
@@ -341,22 +304,9 @@
               You're looking at it. A performant, accessible personal website built with semantic HTML5.
             </p>
 
-            <div class="project-details" style="display: none;">
-              <p class="detailed-desc">
-                Features modern CSS3 with variables for theming, responsive layout, SEO optimization with JSON-LD
-                structured data,
-                and a custom Dark Mode design with glassmorphism UI elements.
-              </p>
-              <div class="tech-stack">
-                <span class="tech-tag">HTML5</span>
-                <span class="tech-tag">CSS3</span>
-                <span class="tech-tag">JavaScript</span>
-                <span class="tech-tag">SEO</span>
-                <span class="tech-tag">Responsive Design</span>
-              </div>
-            </div>
 
-            <button onclick="toggleProject('portfolio')" class="btn btn-outline project-toggle"
+
+            <button onclick="openProject('portfolio')" class="btn btn-outline project-toggle"
               style="font-size:0.8rem; padding:8px 16px;">
               <span class="toggle-text">View Details</span>
             </button>
